2011-06-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSString.h: Add explicit warnings about OSX
	compatible modifications to values returned by path methods.
	* Source/NSTimeZone.m: Don't guess at tzname[0] if the value of
	daylight shows it's not valid.

2011-05-28  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSString.m (-initWithFormat:locale:): Make sure va_end()
	gets called.
	Patch by Stefan Bidigaray <stefanbidi@gmail.com>.

2011-05-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m:
	Try to better cope with bad code which leaks autorelease pools.
	1. check number of pools in thread when creating a new one, and
	raise an exception if too many are created.
	2. when deallocating a pool, avoid recursively deallocating child
	pools so that a large number of pools won't cause stack overflow.

2011-05-23  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSBundle.m:
        Fixe to resolve links and standardize path to current executable.

2011-05-22  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Additions/GSMime.m:
        Fixes for encoding quoted-printable document body content.

2011-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/win32/NSMessagePort.m:
	* Source/win32/NSMessagePortNameServer.m:
	Include/use errno.h for thread-safe errno support.

2011-05-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSArray.m: Fix keyed decoding for GSMutableArray and
	GSPlaceholderArray.

2011-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: treat unknown/undefined encodings as utf-8
	so we tolerate bad xml documents better.

2011-05-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Additions/GSObjCRuntime.m (GSSelectorFromNameAndTypes):
	With gcc 4.6 libobjc, GSSelectorFromNameAndTypes was calling some
	functions like sel_get_any_typed_uid that were not declared (they're